; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uni_msa.c_common_hz_8t_8w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uni_msa.c_common_hz_8t_8w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32)* @common_hz_8t_8w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_hz_8t_8w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %41 = load i32*, i32** @ff_hevc_mask_arr, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 0
  %43 = call i64 @LD_UB(i32* %42)
  store i64 %43, i64* %22, align 8
  %44 = load i32*, i32** %7, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 -3
  store i32* %45, i32** %7, align 8
  %46 = load i32*, i32** %11, align 8
  %47 = call i32 @LD_SH(i32* %46)
  store i32 %47, i32* %36, align 4
  %48 = load i32, i32* %36, align 4
  %49 = load i32, i32* %18, align 4
  %50 = load i32, i32* %19, align 4
  %51 = load i32, i32* %20, align 4
  %52 = load i32, i32* %21, align 4
  %53 = call i32 @SPLATI_H4_SB(i32 %48, i32 0, i32 1, i32 2, i32 3, i32 %49, i32 %50, i32 %51, i32 %52)
  %54 = load i64, i64* %22, align 8
  %55 = add nsw i64 %54, 2
  store i64 %55, i64* %23, align 8
  %56 = load i64, i64* %22, align 8
  %57 = add nsw i64 %56, 4
  store i64 %57, i64* %24, align 8
  %58 = load i64, i64* %22, align 8
  %59 = add nsw i64 %58, 6
  store i64 %59, i64* %25, align 8
  %60 = load i32, i32* %12, align 4
  %61 = ashr i32 %60, 2
  store i32 %61, i32* %13, align 4
  br label %62

62:                                               ; preds = %66, %6
  %63 = load i32, i32* %13, align 4
  %64 = add nsw i32 %63, -1
  store i32 %64, i32* %13, align 4
  %65 = icmp ne i32 %63, 0
  br i1 %65, label %66, label %234

66:                                               ; preds = %62
  %67 = load i32*, i32** %7, align 8
  %68 = load i32, i32* %8, align 4
  %69 = load i32, i32* %14, align 4
  %70 = load i32, i32* %15, align 4
  %71 = load i32, i32* %16, align 4
  %72 = load i32, i32* %17, align 4
  %73 = call i32 @LD_SB4(i32* %67, i32 %68, i32 %69, i32 %70, i32 %71, i32 %72)
  %74 = load i32, i32* %14, align 4
  %75 = load i32, i32* %15, align 4
  %76 = load i32, i32* %16, align 4
  %77 = load i32, i32* %17, align 4
  %78 = call i32 @XORI_B4_128_SB(i32 %74, i32 %75, i32 %76, i32 %77)
  %79 = load i32, i32* %8, align 4
  %80 = mul nsw i32 4, %79
  %81 = load i32*, i32** %7, align 8
  %82 = sext i32 %80 to i64
  %83 = getelementptr inbounds i32, i32* %81, i64 %82
  store i32* %83, i32** %7, align 8
  %84 = load i32, i32* %14, align 4
  %85 = load i32, i32* %14, align 4
  %86 = load i32, i32* %15, align 4
  %87 = load i32, i32* %15, align 4
  %88 = load i64, i64* %22, align 8
  %89 = load i64, i64* %22, align 8
  %90 = load i32, i32* %28, align 4
  %91 = load i32, i32* %29, align 4
  %92 = call i32 @VSHF_B2_SB(i32 %84, i32 %85, i32 %86, i32 %87, i64 %88, i64 %89, i32 %90, i32 %91)
  %93 = load i32, i32* %16, align 4
  %94 = load i32, i32* %16, align 4
  %95 = load i32, i32* %17, align 4
  %96 = load i32, i32* %17, align 4
  %97 = load i64, i64* %22, align 8
  %98 = load i64, i64* %22, align 8
  %99 = load i32, i32* %30, align 4
  %100 = load i32, i32* %31, align 4
  %101 = call i32 @VSHF_B2_SB(i32 %93, i32 %94, i32 %95, i32 %96, i64 %97, i64 %98, i32 %99, i32 %100)
  %102 = load i32, i32* %28, align 4
  %103 = load i32, i32* %29, align 4
  %104 = load i32, i32* %30, align 4
  %105 = load i32, i32* %31, align 4
  %106 = load i32, i32* %18, align 4
  %107 = load i32, i32* %18, align 4
  %108 = load i32, i32* %18, align 4
  %109 = load i32, i32* %18, align 4
  %110 = load i32, i32* %37, align 4
  %111 = load i32, i32* %38, align 4
  %112 = load i32, i32* %39, align 4
  %113 = load i32, i32* %40, align 4
  %114 = call i32 @DOTP_SB4_SH(i32 %102, i32 %103, i32 %104, i32 %105, i32 %106, i32 %107, i32 %108, i32 %109, i32 %110, i32 %111, i32 %112, i32 %113)
  %115 = load i32, i32* %14, align 4
  %116 = load i32, i32* %14, align 4
  %117 = load i32, i32* %15, align 4
  %118 = load i32, i32* %15, align 4
  %119 = load i64, i64* %24, align 8
  %120 = load i64, i64* %24, align 8
  %121 = load i32, i32* %28, align 4
  %122 = load i32, i32* %29, align 4
  %123 = call i32 @VSHF_B2_SB(i32 %115, i32 %116, i32 %117, i32 %118, i64 %119, i64 %120, i32 %121, i32 %122)
  %124 = load i32, i32* %16, align 4
  %125 = load i32, i32* %16, align 4
  %126 = load i32, i32* %17, align 4
  %127 = load i32, i32* %17, align 4
  %128 = load i64, i64* %24, align 8
  %129 = load i64, i64* %24, align 8
  %130 = load i32, i32* %30, align 4
  %131 = load i32, i32* %31, align 4
  %132 = call i32 @VSHF_B2_SB(i32 %124, i32 %125, i32 %126, i32 %127, i64 %128, i64 %129, i32 %130, i32 %131)
  %133 = load i32, i32* %28, align 4
  %134 = load i32, i32* %29, align 4
  %135 = load i32, i32* %30, align 4
  %136 = load i32, i32* %31, align 4
  %137 = load i32, i32* %20, align 4
  %138 = load i32, i32* %20, align 4
  %139 = load i32, i32* %20, align 4
  %140 = load i32, i32* %20, align 4
  %141 = load i32, i32* %37, align 4
  %142 = load i32, i32* %38, align 4
  %143 = load i32, i32* %39, align 4
  %144 = load i32, i32* %40, align 4
  %145 = call i32 @DPADD_SB4_SH(i32 %133, i32 %134, i32 %135, i32 %136, i32 %137, i32 %138, i32 %139, i32 %140, i32 %141, i32 %142, i32 %143, i32 %144)
  %146 = load i32, i32* %14, align 4
  %147 = load i32, i32* %14, align 4
  %148 = load i32, i32* %15, align 4
  %149 = load i32, i32* %15, align 4
  %150 = load i64, i64* %23, align 8
  %151 = load i64, i64* %23, align 8
  %152 = load i32, i32* %32, align 4
  %153 = load i32, i32* %33, align 4
  %154 = call i32 @VSHF_B2_SB(i32 %146, i32 %147, i32 %148, i32 %149, i64 %150, i64 %151, i32 %152, i32 %153)
  %155 = load i32, i32* %16, align 4
  %156 = load i32, i32* %16, align 4
  %157 = load i32, i32* %17, align 4
  %158 = load i32, i32* %17, align 4
  %159 = load i64, i64* %23, align 8
  %160 = load i64, i64* %23, align 8
  %161 = load i32, i32* %34, align 4
  %162 = load i32, i32* %35, align 4
  %163 = call i32 @VSHF_B2_SB(i32 %155, i32 %156, i32 %157, i32 %158, i64 %159, i64 %160, i32 %161, i32 %162)
  %164 = load i32, i32* %32, align 4
  %165 = load i32, i32* %33, align 4
  %166 = load i32, i32* %34, align 4
  %167 = load i32, i32* %35, align 4
  %168 = load i32, i32* %19, align 4
  %169 = load i32, i32* %19, align 4
  %170 = load i32, i32* %19, align 4
  %171 = load i32, i32* %19, align 4
  %172 = load i32, i32* %37, align 4
  %173 = load i32, i32* %38, align 4
  %174 = load i32, i32* %39, align 4
  %175 = load i32, i32* %40, align 4
  %176 = call i32 @DPADD_SB4_SH(i32 %164, i32 %165, i32 %166, i32 %167, i32 %168, i32 %169, i32 %170, i32 %171, i32 %172, i32 %173, i32 %174, i32 %175)
  %177 = load i32, i32* %14, align 4
  %178 = load i32, i32* %14, align 4
  %179 = load i32, i32* %15, align 4
  %180 = load i32, i32* %15, align 4
  %181 = load i64, i64* %25, align 8
  %182 = load i64, i64* %25, align 8
  %183 = load i32, i32* %32, align 4
  %184 = load i32, i32* %33, align 4
  %185 = call i32 @VSHF_B2_SB(i32 %177, i32 %178, i32 %179, i32 %180, i64 %181, i64 %182, i32 %183, i32 %184)
  %186 = load i32, i32* %16, align 4
  %187 = load i32, i32* %16, align 4
  %188 = load i32, i32* %17, align 4
  %189 = load i32, i32* %17, align 4
  %190 = load i64, i64* %25, align 8
  %191 = load i64, i64* %25, align 8
  %192 = load i32, i32* %34, align 4
  %193 = load i32, i32* %35, align 4
  %194 = call i32 @VSHF_B2_SB(i32 %186, i32 %187, i32 %188, i32 %189, i64 %190, i64 %191, i32 %192, i32 %193)
  %195 = load i32, i32* %32, align 4
  %196 = load i32, i32* %33, align 4
  %197 = load i32, i32* %34, align 4
  %198 = load i32, i32* %35, align 4
  %199 = load i32, i32* %21, align 4
  %200 = load i32, i32* %21, align 4
  %201 = load i32, i32* %21, align 4
  %202 = load i32, i32* %21, align 4
  %203 = load i32, i32* %37, align 4
  %204 = load i32, i32* %38, align 4
  %205 = load i32, i32* %39, align 4
  %206 = load i32, i32* %40, align 4
  %207 = call i32 @DPADD_SB4_SH(i32 %195, i32 %196, i32 %197, i32 %198, i32 %199, i32 %200, i32 %201, i32 %202, i32 %203, i32 %204, i32 %205, i32 %206)
  %208 = load i32, i32* %37, align 4
  %209 = load i32, i32* %38, align 4
  %210 = load i32, i32* %39, align 4
  %211 = load i32, i32* %40, align 4
  %212 = call i32 @SRARI_H4_SH(i32 %208, i32 %209, i32 %210, i32 %211, i32 6)
  %213 = load i32, i32* %37, align 4
  %214 = load i32, i32* %38, align 4
  %215 = load i32, i32* %39, align 4
  %216 = load i32, i32* %40, align 4
  %217 = call i32 @SAT_SH4_SH(i32 %213, i32 %214, i32 %215, i32 %216, i32 7)
  %218 = load i32, i32* %37, align 4
  %219 = load i32, i32* %38, align 4
  %220 = call i64 @PCKEV_XORI128_UB(i32 %218, i32 %219)
  store i64 %220, i64* %26, align 8
  %221 = load i32, i32* %39, align 4
  %222 = load i32, i32* %40, align 4
  %223 = call i64 @PCKEV_XORI128_UB(i32 %221, i32 %222)
  store i64 %223, i64* %27, align 8
  %224 = load i64, i64* %26, align 8
  %225 = load i64, i64* %27, align 8
  %226 = load i32*, i32** %9, align 8
  %227 = load i32, i32* %10, align 4
  %228 = call i32 @ST_D4(i64 %224, i64 %225, i32 0, i32 1, i32 0, i32 1, i32* %226, i32 %227)
  %229 = load i32, i32* %10, align 4
  %230 = mul nsw i32 4, %229
  %231 = load i32*, i32** %9, align 8
  %232 = sext i32 %230 to i64
  %233 = getelementptr inbounds i32, i32* %231, i64 %232
  store i32* %233, i32** %9, align 8
  br label %62

234:                                              ; preds = %62
  ret void
}

declare dso_local i64 @LD_UB(i32*) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @VSHF_B2_SB(i32, i32, i32, i32, i64, i64, i32, i32) #1

declare dso_local i32 @DOTP_SB4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @DPADD_SB4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i64 @PCKEV_XORI128_UB(i32, i32) #1

declare dso_local i32 @ST_D4(i64, i64, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
